force-app/main/default/objects/FNS_SFDCFFDCSetup__c/FNS_SFDCFFDCSetup__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Defines SFDC to FFDC configuration parameters.</description>
    <label>SFDC-FFDC Setup</label>
</CustomObject>