force-app/main/default/objects/FNS_SFDCFFDCSetup__c/fields/FNS_AccessToken__c.field-meta.xml
<CustomField>
    <fullName>FNS_AccessToken__c</fullName>
    <label>Access Token Url</label>
    <type>Url</type>
</CustomField>