force-app/main/default/objects/FNS_SFDCFFDCSetup__c/fields/FNS_AccessTokenUrl__c.field-meta.xml
<CustomField>
    <fullName>FNS_AccessTokenUrl__c</fullName>
    <label>Access Token Url</label>
    <type>Url</type>
</CustomField>