force-app/main/default/objects/FNS_SFDCFFDCSetup__c/fields/FNS_APIVersion__c.field-meta.xml
<CustomField>
    <fullName>FNS_APIVersion__c</fullName>
    <label>API Version</label>
    <length>20</length>
    <type>Text</type>
</CustomField>