force-app/main/default/objects/FNS_SFDCFFDCSetup__c/fields/FNS_AuthorizationURL__c.field-meta.xml
<CustomField>
    <fullName>FNS_AuthorizationURL__c</fullName>
    <label>Authorization URL</label>
    <type>Url</type>
</CustomField>