force-app/main/default/objects/FNS_SFDCFFDCSetup__c/fields/FNS_CallBackURL__c.field-meta.xml
<CustomField>
    <fullName>FNS_CallBackURL__c</fullName>
    <label>Call Back URL</label>
    <type>Url</type>
</CustomField>