force-app/main/default/objects/FNS_SFDCFFDCSetup__c/fields/FNS_ConnectionName__c.field-meta.xml
<CustomField>
    <fullName>FNS_ConnectionName__c</fullName>
    <label>Connection Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>