force-app/main/default/objects/FNS_SFDCFFDCSetup__c/fields/FNS_InstanceURL__c.field-meta.xml
<CustomField>
    <fullName>FNS_InstanceURL__c</fullName>
    <label>Instance URL</label>
    <type>Url</type>
</CustomField>