force-app/main/default/objects/FNS_SFDCFFDCSetup__c/fields/FNS_Scope__c.field-meta.xml
<CustomField>
    <fullName>FNS_Scope__c</fullName>
    <label>Scope</label>
    <length>25</length>
    <type>Text</type>
</CustomField>