force-app/main/default/objects/FNS_SFDCFFDCSetup__c/listViews/FNS_SFDCFFDCSetupView.listView-meta.xml
<ListView>
    <fullName>FNS_SFDCFFDCSetupView</fullName>
    <columns>SETUP_OWNER_NAME</columns>
    <columns>SETUP_TYPE</columns>
    <columns>FNS_AccessToken__c</columns>
    <columns>FNS_ConsumerKey__c</columns>
    <columns>FNS_ConsumerSecret__c</columns>
    <filterScope>Everything</filterScope>
    <label>SFDC FFDC Setup View</label>
</ListView>