force-app/main/default/objects/FNS_SFDCFFDCSetup__c/listViews/FNS_View.listView-meta.xml
<ListView>
    <fullName>FNS_View</fullName>
    <columns>SETUP_OWNER_NAME</columns>
    <columns>SETUP_TYPE</columns>
    <columns>FNS_AccessTokenUrl__c</columns>
    <columns>FNS_ConsumerKey__c</columns>
    <columns>FNS_ConsumerSecret__c</columns>
    <filterScope>Everything</filterScope>
    <label>FNS View</label>
</ListView>